fix menu z-index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -253,7 +253,7 @@ body.application {
       ul {
         position: relative;
         width: 183px;
-        z-index: 3000;
+        z-index: 80;
 
         left: 0;
         top: 20px;
